<resources>
    <string name="sort_by_item">Sort By</string>
    <string name="popularity_item">Popular</string>
    <string name="rating_item">Top Rated</string>
    <string name="app_name">MoviePedia</string>
    <string name="parcel_movie">PARCEL_MOVIE</string>
    <string name="heading_vote_average">Vote Average</string>
    <string name="heading_release_date">Release Date</string>
    <string name="description_movie_poster">Contains poster of movie</string>
    <string name="example_date">31-1-2018</string>
    <string name="vote_average">8.2/10</string>
    <string name="example_title">Beauty And the Beast</string>
    <string name="example_overview">A live action adaption of Disney\'s version of the classic tale of a cursed prince and a beautiful young woman who helps him break the spell</string>
</resources>
