<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/poster_IV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/images"
                tools:contentDescription="@string/description_movie_poster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/releasedate_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_release_date"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/relaesedate_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:text="@string/example_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vote_title_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/heading_vote_average"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/vote_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:text="@string/vote_average"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/example_title"
                android:textSize="@dimen/abc_text_size_headline_material" />


            <TextView
                android:id="@+id/overview_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_overview" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>